# rag_web_demo

./: .env.example  .gitignore  docker-compose.yml  make_ppt.js  package.json  readme.md
backend/: config.py  main.py  pyproject.toml
backend/models/: schemas.py
backend/prompts/: rag_system.txt
backend/routers/: collections.py  documents.py  experiments.py  rag.py  search.py
backend/services/: chunking.py  database.py  embedding.py  ingestion.py  pdf_parser.py  qdrant.py  rag_pipeline.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/chunks/: ChunkPreview.tsx  ChunkStrategy.tsx
frontend/src/components/rag/: ComparePanel.tsx  PipelineTrace.tsx  TokenStream.tsx
frontend/src/components/search/: FilterBuilder.tsx  ResultCard.tsx
frontend/src/components/ui/: select.tsx  tabs.tsx
frontend/src/hooks/: useCollections.ts  useDocuments.ts  useSSE.ts
frontend/src/pages/: CollectionsPage.tsx  ExperimentsPage.tsx  IngestPage.tsx  RAGPage.tsx  SearchPage.tsx
frontend/src/types/: api.ts
