[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-web-demo-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "qdrant-client[fastembed]>=1.9",
    "sentence-transformers>=3.0",
    "anthropic>=0.28",
    "pdfplumber>=0.11",
    "nltk>=3.8",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
